motorlar adventure klasörü tamamlandı ve heritage klasörüne başlandı

--- a/motorlar/Adventure/R1300Gs.html
+++ b/motorlar/Adventure/R1300Gs.html
@@ -71,7 +71,108 @@
         <li><a href="#">İletişim</a></li>
       </ul>
     </div>
-    <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->icerik<!-- InstanceEndEditable --></div>
+    <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
+	
+	<table width = "98%" align = "center" >
+		<tr>
+			
+			<td colspan = "5" ><img src = "../../resimler/motorlar/advanture/R1300_GS/1.webp" width = "100%" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td width = "160" ><a class = "resimBaslik">Yakıt Tipi</a></td>
+			<td width = "110" ><a class = "resimBaslik">Güç</a></td>
+			<td width = "110" ><a class = "resimBaslik">Cc</a></td>
+			<td></td>
+			
+		</tr>
+		<tr>
+			
+			<td><a class = "resimAciklama">Benzin</a></td>
+			<td><a class = "resimAciklama">145 bg</a></td>
+			<td><a class = "resimAciklama">1.300 cc</a></td>
+			
+		</tr>
+	</table>
+	
+	<pre>
+		<p class = "icerik" align="center">
+     <b> “ RİTMİ BERABER 
+	 AYARLAYALIM ”</b>
+	 
+	 <b>Takip eden olmak yerine yolu siz gösterin.</b>
+	Bir araya geldiğimizde bireysel olduğumuzdan çok daha fazlası olabiliriz. Hatta kendinizin en iyi 
+	versiyonu olabilirsiniz. Yolu siz gösterin. Her yokuş ve her virajla kolayca başa çıkın. Sizi 
+	hiçbir şey durduramaz, off-road yollar bile. Size ilham verenler: Cesaretiniz, kendinize olan 
+	inancınız ve sağlam bir güç aktarım sistemi. Birlikte yeni standartları belirleyebilir ve
+	#GSRuhu’nu yaşayabiliriz.
+
+		
+	    </p>
+		
+	</pre>
+	
+	<br><br>
+	
+	<table width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>Bir sonraki seviyeye ulaşın</b><br>Her şey ihtiyaçlarınız düşünülerek tasarlandı: Yeni nesil sürüş konforu Yenilikçi Telelever poryası olağanüstü bir kullanım sunuyor. Ekstra düz yakıt deposu sele çizgisiyle GS silüeti yepyeni bir hareket özgürlüğü, kolay manevra kabiliyeti ve rahat bir duruş sağlıyor. Geniş ergonomik seçenekler farklı ihtiyaçları olan sürücülerin her türlü zeminle başa çıkabilmesini sağlıyor. Opsiyonel Sürüş Asistanı çevresel sensör sistemi her şeyi bir bakışta görebilme olanağı sunuyor.</a></td>
+			<td width = "45%" ><img src = "../../resimler/motorlar/advanture/R1300_GS/seviye.jpg" width = "100%" ></td>
+			
+		</tr>
+		
+	</table>
+	
+	<br><br>
+	
+		<pre>
+		
+			<p class="#" align="center">
+	
+	<b>YÜKSEK PERFORMANS AÇISINDAN ÖNE ÇIKANLAR</b>
+		
+	Önünüzde: Yeni hedefiniz; ikonik LED matrix farla çok iyi şekilde aydınlatılmış durumda. Arkanızda:
+	Kilometre taşları. Mükemmel kişiselleştirme potansiyeliyle kısa Monokok arka bölüm. Hiç şüphe yok: 
+	Olağanüstü Adventure motosikletleri ürün yelpazesinin en üst modelini kullanıyorsunuz. Kapsamlı 
+	standart donanımı keşfedin.	
+			
+			</p>
+		</pre>	
+		
+
+	<!--Slider-->
+	
+	
+	<table width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>GS ruhunun özüne indirgendi</b><br>Yeni maceraların zamanı geldi. Anahtarsız Sürüş sayesinde doğrudan motosikletinize atlayıp sürüşe başlayabilirsiniz. 800 ve 890 mm arasında değişen sele yüksekliğine sahip standart sürücü selesi konforlu bir yolculuk sağlıyor. Elcik korumasına entegre edilmiş sinyali etkinleştirin ve yönünüzü özgürlüğe çevirin. Motosikletinizi sürdüğünüz her metrede daha net görülüyor: Gerçekten benzersiz bir motosikletin üzerindesiniz. İşte bu kadar basit - gerçek büyüklük mutlaka daha büyük anlamına gelmiyor. Gösterişli parçalar yok, her şey GS’in özünü içerek şekilde yoğunlaştırıldı: Eşsiz sürüş keyfi. </a></td>
+			<td width = "45%" ><img src = "../../resimler/motorlar/advanture/R1300_GS/8.jpg" width = "100%" ></td>
+			
+		</tr>
+		
+	</table>
+	
+	<br><br>
+	<table width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+		
+			<td width = "45%"><img src = "../../resimler/motorlar/advanture/R1300_GS/9.jpg" height="275px" width="100%"></td>
+			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>Kendinize inanın</b><br>Beklenmedik şekilde hafif ve her şey elinizin altında. Elbette öyle, ne de olsa altınızda yalnızca 237 kilogram* bulunuyor. Büyük hedeflere ulaşmak şaşırtıcı derecede kolay. Her türlü zeminde beklenmedik bir sürüş deneyimi. Yol üzerinde denge ve hassasiyetle. Yatma açısı, fren, hızlanma - tüm kontrol sizin elinizde. Yeni geliştirilen şasi, yeni Monokok arka kadro, yeni EVO Telelever ve EVO Paralever ile birlikte yeni DSA (Dinamik Süspansiyon Ayarı) ve yenilikçi adaptif araç yüksekliği kontrolü ile yeni sürüş keyfini keşfedin.  </a></td>
+			
+		</tr>
+		
+	</table>
+	
+	<br><br>
+	
+	
+	<!-- InstanceEndEditable --></div>
     <div id="fooder">
     	<table width="100%" >
         	
