--- a/motorlar/Heritage/R_18.html
+++ b/motorlar/Heritage/R_18.html
@@ -16,9 +16,10 @@
 <div id="anaDiv">
   <div id="Header">
   
-    <div id="logo"><a href = "../../index.html"><img src = "../../resimler/logolar/bmwLogo.png" width="180" /></a></div>
+    <div id="logo"><a href = "../../index.html"><img src = "../../resimler/logolar/bmwLogo.png" width="100%" /></a>
+    </div>
     
-    <div id="banner"><img src="../../resimler/banner/banner.jpg" width="1520" /></div>
+    <div id="banner"><img src="../../resimler/banner/banner.jpg" width="100%" /></div>
   </div>
   <div id="icerik1Dİv">
     <div id="menuDiv">
@@ -76,7 +77,7 @@
 	<table width = "98%" align = "center" >
 		<tr>
 			
-			<td colspan = "5" ><img src = "../../resimler/motorlar/advanture/R1250_GS/1.jpg" width = "100%" ></td>
+			<td colspan = "5" ><img src = "../../resimler/motorlar/heritage/R_18/as.jpg" width = "100%" ></td>
 			
 		</tr>
 		<tr>
@@ -84,24 +85,26 @@
 			<td width = "160" ><a class = "resimBaslik">Yakıt Tipi</a></td>
 			<td width = "110" ><a class = "resimBaslik">Güç</a></td>
 			<td width = "110" ><a class = "resimBaslik">Cc</a></td>
-			<td width = "110" ><a class = "resimBaslik">Depo</a></td>
 			<td></td>
 			
 		</tr>
 		<tr>
 			
 			<td><a class = "resimAciklama">Benzin</a></td>
-			<td><a class = "resimAciklama">136 bg</a></td>
-			<td><a class = "resimAciklama">1.254 cc</a></td>
-			<td><a class = "resimAciklama">30 L</a></td>
+			<td><a class = "resimAciklama">91 bg</a></td>
+			<td><a class = "resimAciklama">1.800 cc</a></td>
 			
 		</tr>
 	</table>
 	
 	<pre>
 		<p class = "icerik" align="center">
-     <b> BMW R 1250 GS ADVENTURE
-HİÇBİR HEDEF ÇOK UZAK DEĞİL</b>
+	 
+	 <b>İlk bakışta bir cruiser motosiklet.</b>
+	
+Silueti uzun ve alçak olan bu yeni modelin çift motor beşikli şasisi etkileyici duruşu öne çıkaran 
+güçlü, heykel gibi şekillendirilmiş motoru sarmalıyor. Sürücüye birçok özel donanım seçeneği sunan 
+R 18, eksiksiz bir kişiselleştirme için en temel özelliklerine indirgendi.
 
 		
 	    </p>
@@ -114,8 +117,8 @@ HİÇBİR HEDEF ÇOK UZAK DEĞİL</b>
 		
 		<tr>
 			
-			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"> Dünya keşfedilmeyi bekliyor. Her zaman görülecek yeni bir şeyler var. Touring enduro motosikletlerin lideri R 1250 GS Adventure, geçit vermeyen rotalar, olumsuz koşullar ve en uzak yerler için üretildi. Bu nedenle modelin touring uyumunu ve konforundaki yüksek standartları daha da iyileştirdik. Sürücü destek sistemleri, aydınlatma teknolojisi ve gelişmiş sürüş modlarından USB soketine kadar her özelliğiyle R 1250 GS Adventure, bilinmeyen yerleri keşfetmeniz için gereken her şeyi size sunuyor. BMW ShiftCam özelliğine sahip güçlü boxer motor sayesinde her yere kolaylıkla erişmenizi sağlıyor. Çünkü biliyoruz ki, dünyayı dolaşmak için aklınızda sonsuz sayıda fikir, hayal var. İşte bu, GS ruhunun ta kendisi değil mi?   </a></td>
-			<td width = "45%" ><img src = "../../resimler/motorlar/advanture/R1250_GS/2.jpg" width = "100%" ></td>
+			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>Kişisel Cruiser modelinizi tasarlayın</b><br>Option 719, R 18'e kişisel dokunuşunuzu katabileceğiniz birçok fırsat sunuyor. Option 719 İki Renkli Icon döküm jantlar, motosikletin üst segment görünümünü tamamlıyor. Siyah renkli suni deriden üretilen Option 719 sele, elmas şeklindeki kabartmaları ve dikişlerinin yanı sıra işlemeli BMW armasıyla tüm yolculukları daha da konforlu hale getiriyor.</a></td>
+			<td width = "45%" ><img src = "../../resimler/motorlar/heritage/R_18/1.jpg" width = "100%" ></td>
 			
 		</tr>
 		
@@ -127,12 +130,12 @@ HİÇBİR HEDEF ÇOK UZAK DEĞİL</b>
 		
 			<p class="#" align="center">
 	
-	<b>ÖNE ÇIKAN ÖZELLİKLERİ KEŞFEDİN</b>
-		R 1250 GS Adventure dünyanın her yerinde kendini evinde hisseder. Hiçbir hedef onun için uzak
-		 değildir. İster asfaltta olun ister arazide, yol boyunca sizi nasıl bir zeminin beklediğini 
-		 bilmeden bile motosikletinize sonuna kadar güvenebilirsiniz. R 1250 GS Adventure’ın size
-		sağladığı konfor ve güven ile uzun mesafelerden daha yoğun bir şekilde keyif alırsınız. 
-		R 1250 GS Adventure ile her zaman ekstra birkaç kilometre daha yola hazırsınız.	
+	<b>YÜKSEK PERFORMANS AÇISINDAN ÖNE ÇIKANLAR</b>
+		
+	Önünüzde: Yeni hedefiniz; ikonik LED matrix farla çok iyi şekilde aydınlatılmış durumda. Arkanızda:
+	Kilometre taşları. Mükemmel kişiselleştirme potansiyeliyle kısa Monokok arka bölüm. Hiç şüphe yok: 
+	Olağanüstü Adventure motosikletleri ürün yelpazesinin en üst modelini kullanıyorsunuz. Kapsamlı 
+	standart donanımı keşfedin.	
 			
 			</p>
 		</pre>	
@@ -145,20 +148,38 @@ HİÇBİR HEDEF ÇOK UZAK DEĞİL</b>
 		
 		<tr>
 			
-			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b> Bilinmeyen arazilere kolayca adım</b><br>R 1250 GS Adventure modelinin konfora yönelik ergonomik özellikleri ve oturma pozisyonu her durumda üstün bir görüş sunar ve motosikleti kolaylıkla kontrol edebilmenizi sağlar. Gidonlar da 30 mm kadar yükseltilebilir, bu sayede uzun boylu bir sürücü olarak ya da off-road sürüşü sırasında motosikletinizi konforlu ve kendinizden emin bir şekilde ayakta kullanabilirsiniz. Ek olarak 790 ile 910 mm arasında geniş bir aralığa sahip sele yükseklikleri ve kapsamlı sele seçenekleri, size en uygun R 1250 GS Adventure modelini bulmanızı garanti eder. Sele ısıtma sistemi ise sizin ve yolcunuzun her geziden çok daha fazla keyif almasını mümkün kılar.</a></td>
-			<td width = "45%" ><img src = "../../resimler/motorlar/advanture/R1250_GS/3.jpg" width = "100%" ></td>
+			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik">Kararlı bir şekilde 1923’ten beri boxer motora güveniyoruz. R 18’in 1802 cc, iki silindirli boxer motoru şimdiye dek ürettiğimiz en yüksek hacme sahip boxer motor. 3000 dev/dak’da 158 Nm maksimum tork sunuyor. 2000’den 4000 dev/dak’ya kadar her zaman 150 Nm’nin üzerinde tork sunuyor. Bu bir boxer motorun tipik çalışma karakteriyle son derece istikrarlı, yüksek bir tork sunulduğu anlamına geliyor. Bu ‘Big Boxer’, 4750 dev/dak’da 91 bg (67 kW) güç üretiyor. Böylelikle yolda saf bir heyecan için geleneksel özelliklerle modern teknoloji bir araya geliyor. </a></td>
+			<td width = "45%" ><img src = "../../resimler/motorlar/heritage/R_18/10.jpg" width = "100%" ></td>
 			
 		</tr>
 		
 	</table>
 	
+	
 	<br><br>
+	
+	
 	<table width = "75%" cellpadding = "10" align = "center" >
 		
 		<tr>
-		
-			<td width = "45%"><img src = "../../resimler/motorlar/advanture/R1250_GS/8.jpg" height="275px" width="100%"></td>
-			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>LED aydınlatma teknolojisi</b><br>Daha fazla parlaklık, görünürlük ve belirginlikle tamamen LED döner farlar ve adaptif farlar yan, üst ve alt bölümlerde üst düzeyde ve sabit bir aydınlatma mesafesi sunar. Zeminin eğimine, yük kapasitesine ve dönüşlerdeki yatış açısına bağlı olarak değişir.<br>Bu sayede ışık, motosikleti sürdüğünüz her yöne yayılır. Seyir Işığı özelliğine sahip LED sinyal lambaları, ön kısımda sürekli olarak karartılan aydınlatma özelliğiyle dikkat çekici bir görünüm oluşturur. Arka bölümde ise çok işlevli ön LED sinyal lambaları pasif güvenliği artırır. Diğer öne çıkan özellikler, kontak kapatıldığında etkinleştirilebilen ve karanlıkta park sırasında son derece pratik olan sürüş ışıklarının yanı sıra Karşılama ve Uğurlama ışıklarıdır.­ </a></td>
+			
+			<td width = "30%" ><img src = "../../resimler/motorlar/heritage/R_18/alt1.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/motorlar/heritage/R_18/alt2.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/motorlar/heritage/R_18/alt3.jpg" width = "100%" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "center" ><a class = "aciklamaBaslik"> BMW R 18 100 Years  </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik">  Değerli bir miras. Saf tutku. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Heritage koleksiyonu. Stiliniz önemlidir. </a></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklama">100. yıl dönümü için sınırlı sayıda üretielen özel modelimiz </a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">İster tek başına ister bir grupta olun,sahici ve rahat bir deneyim yaşayacaksınız. </a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Hassas,boyutları küçültülmüş,klasik.En sevdiğiniz parçalar.</a></td>
 			
 		</tr>
 		
