motorlar heritage klasörüne yeni sayfalar eklendi. Resimlerde değişiklik yapıldı

--- a/motorlar/Heritage/R_nineT.html
+++ b/motorlar/Heritage/R_nineT.html
@@ -72,7 +72,113 @@
         <li><a href="#">İletişim</a></li>
       </ul>
     </div>
-    <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->icerik<!-- InstanceEndEditable --></div>
+    <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
+	<table width = "98%" align = "center" >
+		<tr>
+			
+			<td colspan = "5" ><img src = "../../resimler/motorlar/heritage/R_nineT/as.jpg" width = "100%" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td width = "160" ><a class = "resimBaslik">Yakıt Tipi</a></td>
+			<td width = "110" ><a class = "resimBaslik">Güç</a></td>
+			<td width = "110" ><a class = "resimBaslik">Cc</a></td>
+			<td></td>
+			
+		</tr>
+		<tr>
+			
+			<td><a class = "resimAciklama">Benzin</a></td>
+			<td><a class = "resimAciklama">110 bg</a></td>
+			<td><a class = "resimAciklama">1.1170 cc</a></td>
+			
+		</tr>
+	</table>
+	
+	<br><br>
+	
+	<pre>
+		<p class = "icerik" >
+	 
+					<b>BMW R NINET
+				KLASİK, SAF VE TUTKULU</b>
+
+	    </p>
+		
+	</pre>
+	
+	<br><br>
+	
+	<table width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik">En ince ayrıntısına kadar sadeleştirilen ve kişiliğini halen eksiksiz bir şekilde yansıtmaya devam eden BMW R nineT. Bu klasik roadster, yüksek kaliteli malzemeleri ve en ince detayına kadar titizlikle gerçekleştirilen işçiliği ile motosiklet tasarımının 90 yılı aşkın geçmişindeki tutkuyu ve yenilikleri yansıtıyor. Modelin ikonik boxer motoru, orijinal oranlarla şimdi çok daha iyi bir biçimde bir araya geliyor ve böylece iyileştirilmiş tork eğrisiyle asfalta hükmetmenizi sağlıyor. Ayrıca, çok sayıda kişiselleştirme seçeneği sayesinde kendinizi ifade etmeniz için sınırsız olanak sunuluyor. Siz de #Soulfuel topluluğunun bir parçası olun ve BMW R nineT ile kişiliğinizi ortaya koyun.</a></td>
+			<td width = "45%" ><img src = "../../resimler/motorlar/heritage/R_nineT/tutku.jpg" width = "100%" ></td>
+			
+		</tr>
+		
+	</table>
+	
+	<!-- slider -->
+	
+	<pre>
+	<!-- ozel class acılmalı -->
+		<p class = "icerik" >
+	 
+					<b>“Yüksek kaliteli malzemelere ve el yapımı karaktere sahip BMW R nineT, 
+					kişiselleştirme hayranlarının çoğunun ilk tercihi. ”
+															Dominic Thönnes
+															Ürün Yönetimi</b>
+
+	    </p>
+		
+	</pre>
+	
+	<table width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>Her virajda kendini daha canlı hisset</b><br>Pro sürüş modları, BMW R nineT motosikletinizin gaz alımını ve gaz kelebeği tepkisini etkiler. “Dynamic” modu, motoru daha doğrudan tepki verir hale getirir ve kuru asfalt üzerinde daha dinamik bir sürüş sağlar. Adaptif viraj ışığı ise her virajda daha güvenli bir yatışa olanak tanır. Bunun nedeni, virajın iç kısmının aydınlatmasını, yaklaşık 25 derecelik bir yatış açısına kadar iyileştirmesidir.</a></td>
+			<td width = "45%" ><img src = "../../resimler/motorlar/heritage/R_nineT/viRAJ.jpg" width = "100%" ></td>
+			
+		</tr>
+		
+	</table>
+	
+		<pre>
+		
+			<p class="#" align="center">
+	
+	<b>Gücün keyfini çıkarın</b>
+		
+	
+		Güçlü hava/yağ soğutmalı çift silindirli boxer motor, artık daha akıcı bir şekilde çalışıyor. 1.170
+		cc motor hacminden halen 109 bg (80 kW) motor gücü alıyor olsa da 4.000 ve 6.000 dev/dak aralığındaki 
+		düzleştirilmiş güç ve tork eğrisi sayesinde çok daha iyi bir iş çıkarıyor. Bu da kırsal yolları çok 
+		daha keyifli hale getiriyor. Ayrıca motor, yeni Euro 5 standartlarına da uyum sağlıyor.
+			
+			</p>
+		</pre>	
+		
+
+	<!--Slider-->
+	
+	
+	<table width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td width = "45%" ><img src = "../../resimler/motorlar/heritage/R_nineT/tasarla.jpg" width = "100%" ></td>
+			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>Kendi BMW R nineT’nizi tasarlayın</b><br>BMW R nineT, modüler tasarımı sayesinde, kişisel stilinizi ifade etmek için mükemmel bir seçim. Saf alüminyumdan üretilen Option 719 Classic Billet Pack ile motosikletinize stil sahibi vurgular ekleyebilirsiniz. Ayrıca girift şekilde üretilen Option 719 bicolor Sport döküm jantlar ile uzun süreli bir etki bırakmanız garanti edilir.</a></td>
+			
+		</tr>
+		
+	</table>
+	<br><br>
+	
+	<!-- InstanceEndEditable --></div>
     <div id="fooder">
     	<table width="100%" >
         	
