--- a/motorlar/Heritage/R_nineT_Urban.html
+++ b/motorlar/Heritage/R_nineT_Urban.html
@@ -72,7 +72,112 @@
         <li><a href="#">İletişim</a></li>
       </ul>
     </div>
-    <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->icerik<!-- InstanceEndEditable --></div>
+    <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
+	
+	<table width = "98%" align = "center" >
+		<tr>
+			
+			<td colspan = "5" ><img src = "../../resimler/motorlar/heritage/R_nineT_Urban/as.jpg" width = "100%" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td width = "160" ><a class = "resimBaslik">Yakıt Tipi</a></td>
+			<td width = "110" ><a class = "resimBaslik">Güç</a></td>
+			<td width = "110" ><a class = "resimBaslik">Cc</a></td>
+			<td></td>
+			
+		</tr>
+		<tr>
+			
+			<td><a class = "resimAciklama">Benzin</a></td>
+			<td><a class = "resimAciklama">110 bg</a></td>
+			<td><a class = "resimAciklama">1.1170 cc</a></td>
+			
+		</tr>
+	</table>
+	
+	<br><br>
+	
+	<pre>
+		<p class = "icerik" >
+	 
+					<b>BMW R NINE T URBAN G/S
+		ÖZGÜN, ÇARPICI VE DENGELİ</b>
+
+	    </p>
+		
+	</pre>
+	
+	<br><br>
+	
+	<table width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik">Hedefe giden en düz yoldan saparak yan yolların keyfini çıkarmak isteyenler için. Taşlı, çakıllı yollar söz konusu olduğunda da R nineT Urban G/S tam formunda hisseder. Tasarımı ilk G/S modellerini anımsatır. Bu efsanevi BMW R 80 G/S modelidir. Onunla birlikteyken her şey mümkün. Dik, rahat oturma pozisyonu, dengeli kullanımı ve tartışmasız boxer sesiyle R nineT Urban G/S tarihi kendi öykünüzü de katarak yeniden yazmanız için size meydan okuyor. Kişisel, bağımsız ve gerçek anlamda #Soulfuel.</a></td>
+			<td width = "45%" ><img src = "../../resimler/motorlar/heritage/R_nineT_Urban/dengeli.jpg" width = "100%" ></td>
+			
+		</tr>
+		
+	</table>
+	
+	<!-- slider -->
+	
+	<pre>
+	<!-- ozel class acılmalı -->
+		<p class = "icerik" >
+	 
+							<b>“Bu özellikleriyle sizi geçmişe götürecek ve 
+							yeni hikayeler yazarken hep yanı başınızda 
+							olacak. Motosikletinize atlayıp sürmeye 
+							başladığınızda, sürüşün hedefe ulaşmaktan daha
+							keyifli olduğunu fark edeceksiniz. ”</b>
+																	     Ulli Sengenberger
+															Renk, grafik ve yüzey tasarımı, R nineT
+	    </p>
+		
+	</pre>
+	
+	<table width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td width = "45%" ><img src = "../../resimler/motorlar/heritage/R_nineT_Urban/efsane.jpg" width = "100%" ></td>
+			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>Kendi efsanenizi yaratın</b><br>Güçlü rol modeller her zaman etkileyicidir. Bu tasarım için de geçerlidir. Buna rağmen R nineT Urban G/S sizi de unutulamaz kılacak bazı seçenekler sunuyor. Option 719 Classic ham metal paketiyle kaliteyi ve işçiliğe gösterilen özeni hemen fark edeceksiniz. Anodize edilmiş altın rengi tel jantlar ile bireyselliğinizi yansıtabilirsiniz.</a></td>
+			
+		</tr>
+		
+	</table>
+	
+		<pre>
+		
+			<p class="#" align="center">
+	
+			<b>Noktayı koymak istediğinizde</b>
+	
+			Şehir içi trafiğinde güçlü bir şekilde ilerlemek veya taşlı çakıllı yollarda doğaçlama bir gezintiye çıkmak 
+			mı istiyorsunuz? Hava/yağ soğutmalı boxer hayallerinizi gerçekleştirir. Üstelik, yolculuğu da eğlenceli hale 
+			getirir. Sürüş tarzı dengeli ve gerektiğinde heyecan verici dinamiklerle doludur. İyileştirilmiş tork eğrisi 
+			4.000 ve 6.000 dev/dk arasında dinamik bir çekiş gücü sunar. Aklınıza esecek fikirler tam da bu noktada doğar.
+			Azami tork yine 6.000 dev/dk’da 116 Nm’dir. Boxer motor elbette Euro 5 standardının gerekliliklerini karşılar
+			
+			</p>
+		</pre>	
+	
+	<table width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>Her virajda kendini daha canlı hisset</b><br>R nineT Urban G/S dengeli bir sürüşe sahip olmasıyla öne çıkıyor. Pro sürüş modları içinde yer alan yeni Dirt moduyla taşlı, topraklı bozuk yollarda ASC veya DTC kontrol sistemlerinin daha geç devreye girmesine izin verebilirsiniz. Adaptif farlar da 7° ve 25° derece arasındaki topuk açılarında virajın iç kısmını en uygun şekilde aydınlatır.</a></td>
+			<td width = "45%" ><img src = "../../resimler/motorlar/heritage/R_nineT/viRAJ.jpg" width = "100%" ></td>
+			
+		</tr>
+		
+	</table>
+	
+	
+	<!-- InstanceEndEditable --></div>
     <div id="fooder">
     	<table width="100%" >
         	
