linkler düzenlendi x2 ve x3 eklendi

--- a/modeller/XSeries/X2Series.html
+++ b/modeller/XSeries/X2Series.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="baslik" -->
 <title>
-BMW X1 Series
+BMW X2 Series
 </title>
 <link href="../../css/araba.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
@@ -79,18 +79,18 @@ BMW X1 Series
 	<table width = "98%" align = "center" class = "resim" >
 		<tr>
 			
-			<td colspan = "5" height = "150" valign = "middle" ><a class = "baslik">BMW X1 Series</a></td>
+			<td colspan = "5" height = "150" valign = "middle" ><a class = "baslik">BMW X2 Series</a></td>
 			
 		</tr>
 		<tr>
-			<td colspan = "5" width = "100%" ><img src = "../../resimler/modeller/X/X1/Xilk.jpg" width = "100%" ></td>
+			<td colspan = "5" width = "100%" ><img src = "../../resimler/modeller/X/X2/X2.jpg" width = "100%" ></td>
 		</tr>
 		<tr>
 			
-			<td width = "14%" ><a class = "resimBaslik">Motor ve Yakıt Tipi</a></td>
+			<td width = "14%" ><a class = "resimBaslik">Motor ve Yakıt Tipi Tipi</a></td>
 			<td width = "10%" ><a class = "resimBaslik">Güç</a></td>
 			<td width = "10%" ><a class = "resimBaslik">0-100KM</a></td>
-			<td width = "17%" ><a class = "resimBaslik">Bağaj Hacmi</a></td>
+			<td width = "17%" ><a class = "resimBaslik">Maksimum Hız</a></td>
 			<td></td>
 			
 		</tr>
@@ -99,27 +99,26 @@ BMW X1 Series
 			<td><a class = "resimAciklama">Benzin</a></td>
 			<td><a class = "resimAciklama">170 bg</a></td>
 			<td><a class = "resimAciklama">h:8,3 sn</a></td>
-			<td><a class = "resimAciklama">500 lİtre</a></td>
+			<td><a class = "resimAciklama">213 km/sa</a></td>
 			
 		</tr>
 	</table>
 	
-	<pre>
-		<p class = "icerik" >
-		
-	Yeni BMW X1, çok yönlülüğü ve işlevselliği ile herkesi etkilemeyi başarıyor:
- 
-
-	- Sportif ve kendinden emin bir duruş için özenle işlenmiş dış tasarım
-	- Yüksek kaliteli malzemeler ve BMW Kavisli Ekran gibi yeniliklerle donatılmış iç tasarım
-
-	Yeni BMW X1 sDrive20i:
-	Yakıt tüketimi (litre/100 km) (WLTP ortalama): 5,9 - 6,6 
-	CO2 emisyonu (g/km) (WLTP ortalama): 133 - 149
-		
-		</p>
-		
-	</pre>
+	<br><br><br>
+	
+	<table align = "center" width = "85%" >
+		<tr>
+			<td><a class = "aciklamaBaslik" >TASARIM VE PERFORMANSIN ZİRVESİ.</a></td>
+		</tr>
+		<tr>
+			
+			<td><a class = "aciklama">Yeni BMW X2, özellikle dinamik coupé silueti ve dışa dönük tasarımı sayesinde günlük yaşamı daha heyecanlı, 
+			daha sportif ve daha konforlu hale getiriyor. Etkileyici iç tasarım detaylarında standart olarak sunulan panoramik cam tavan ve 
+			BMW Kavisli Ekran dikkat çekiyor. Yeni BMW X2 sDrive20i modeli Mild Hybrid teknolojisi ile 170 beygir güç üreterek 213 km/sa
+			maksimum hız seviyesine ulaşıyor.</a></td>
+			
+		</tr>
+	</table>
 	
 	<br><br>
 	
@@ -134,16 +133,16 @@ BMW X1 Series
 		</tr>
 		<tr>
 			
-			<td align = "center" ><a class = "miniAciklamaBaslik"> Kokpitte sezgisel kontroller.</a></td>
-			<td align = "center" ><a class = "miniAciklamaBaslik"> Modern merkez konsol. </a></td>
-			<td align = "center" ><a class = "miniAciklamaBaslik"> Arka bölümde konfor. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Daha fazla ışık, daha fazla görüş. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Jantlara kadar her detayıyla benzersiz. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Sportif ve dışa dönük. </a></td>
 			
 		</tr>
 		<tr>
 			
-			<td align = "justify" valign = "top" ><a class = "miniAciklama">Dokunmatik ve sesli kontrol özelliğine sahip BMW Kavisli Ekran, ince ve çerçevesiz yapısıyla gerçek anlamda göz alıcı bir detay olmasının yanı sıra BMW iDrive'ın temel arayüzünü oluşturuyor.</a></td>
-			<td align = "justify" valign = "top" ><a class = "miniAciklama">Düğmeli/kaydırmalı kontrol özelliğine sahip modern merkez konsol, yeni nesil kumanda öğeleri ve entegre kablosuz şarj yuvası ile karşımıza çıkıyor.</a></td>
-			<td align = "justify" valign = "top" ><a class = "miniAciklama">Ayrıcalıklı kontrast dikişlerle sunulan Sensatec döşemeleri ve yeni tasarımları sayesinde arka koltuklar tüm yolculara üst düzey konfor deneyimi yaşatıyor. Birbirinden bağımsız olarak 40:20:40 oranında katlanabilen sırtlıklar oldukça esnek bir kullanım sunuyor.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama"> LED farlar önünüzdeki yolu mükemmel bir şekilde aydınlatıyor. Arka far grubu da LED teknolojisiyle öne çıkan Yeni BMW iX2 karanlık yollarda en iyi ışıkla daha güvenli bir sürüş sunuyor.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama"> 19 inç, V kollu, stil 867, Bicolor, Midnight Gri, parlak işlenmiş hafif alaşım jantlar. 8J x 19 jant boyutu ile 245/45 R19 lastikler. </a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama"> Kafes görünümüne sahip Böbrek Izgara tasarımı otomobile keskin hatlar kazandırarak sportif bir görünüm sağlıyor. </a></td>
 			
 		</tr>
 		
@@ -168,22 +167,23 @@ BMW X1 Series
 		</tr>
 		<tr>
 			
-			<td align = "center" ><a class = "aciklamaBaslik">   Vites kulakçıkları ile Steptronic şanzıman.  </a></td>
-			<td align = "center" ><a class = "aciklamaBaslik">  19 inç M Alaşım fren.  </a></td>
-			<td align = "center" ><a class = "aciklamaBaslik"> TwinPower Turbo sıralı 4 silindirli benzinli motor. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Daha fazla özellik ve sezgisel kullanım. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Her koltukta konfor. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Yükseltilmiş merkez konsol.</a></td>
 			
 		</tr>
 		<tr>
 			
-			<td align = "justify" valign = "top" ><a class = "aciklama">Vites değiştirme kulakçıklarına sahip otomatik 7 ileri Steptronic şanzıman, sportif vites değiştirme karakterini yüksek verimlilik ve üst düzey sürüş konforuyla bir araya getiriyor.</a></td>
-			<td align = "justify" valign = "top" ><a class = "aciklama">Gri fren kaliperleriyle 19 inç M Alaşım fren olağanüstü seviyede yavaşlama ve üstün bir denge sağlar.</a></td>
-			<td align = "justify" valign = "top" ><a class = "aciklama">TwinPower Turbo sıralı 4 silindirli benzinli motor, dinamik güç üretimini M ailesine özgü güçlü motor sesiyle birlikte sunuyor.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Geniş kavisli ekranı ve İşletim Sistemi 9 ile sunulan BMW Live Cockpit Professional’ı kullanarak müzik, navigasyon ve araç ayarlarınızı kolayca kontrol edebilirsiniz. </a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Spor koltuklar ergonomik özelliği sayesinde konfor sağlarken daha dinamik sürüşler için de destek sağlıyor. İhtiyaçlarınıza mükemmel şekilde uyum sağlayan spor koltukların keyfini çıkarın. </a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Vites koluna kolay erişim sunan yükseltilmiş merkez konsolun şık tasarımı iç mekana mükemmel şekilde uyum sağlıyor. Diğer vites kollarından önemli ölçüde küçük olsa da sezgisel kullanım sunuyor. </a></td>
 			
 		</tr>
 		
 	</table>
 	
 	<br><br><br>
+	
 	
 	<!-- InstanceEndEditable --></div>
     <div id="fooder">
