--- a/modeller/XSeries/X3Series.html
+++ b/modeller/XSeries/X3Series.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="baslik" -->
 <title>
-BMW X1 Series
+BMW X3 Series
 </title>
 <link href="../../css/araba.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
@@ -75,115 +75,121 @@ BMW X1 Series
       </ul>
     </div>
     <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
-	
+    
 	<table width = "98%" align = "center" class = "resim" >
 		<tr>
 			
-			<td colspan = "5" height = "150" valign = "middle" ><a class = "baslik">BMW X1 Series</a></td>
+			<td colspan = "5" height = "150" valign = "middle" ><a class = "baslik">BMW X3 Series</a></td>
 			
 		</tr>
 		<tr>
-			<td colspan = "5" width = "100%" ><img src = "../../resimler/modeller/X/X1/Xilk.jpg" width = "100%" ></td>
+			<td colspan = "5" width = "100%" ><img src = "../../resimler/modeller/X/X3/X3.jpg" width = "100%" ></td>
 		</tr>
 		<tr>
 			
 			<td width = "14%" ><a class = "resimBaslik">Motor ve Yakıt Tipi</a></td>
 			<td width = "10%" ><a class = "resimBaslik">Güç</a></td>
 			<td width = "10%" ><a class = "resimBaslik">0-100KM</a></td>
-			<td width = "17%" ><a class = "resimBaslik">Bağaj Hacmi</a></td>
+			<td width = "17%" ><a class = "resimBaslik">Ortalama Yakıt Tüketimi</a></td>
 			<td></td>
 			
 		</tr>
 		<tr>
 			
-			<td><a class = "resimAciklama">Benzin</a></td>
-			<td><a class = "resimAciklama">170 bg</a></td>
-			<td><a class = "resimAciklama">h:8,3 sn</a></td>
-			<td><a class = "resimAciklama">500 lİtre</a></td>
+			<td><a class = "resimAciklama">Benzin - Dizel</a></td>
+			<td><a class = "resimAciklama">190 bg</a></td>
+			<td><a class = "resimAciklama">h:7.9 – 9 sn</a></td>
+			<td><a class = "resimAciklama">6.5 – 5.8 l/100 km</a></td>
 			
 		</tr>
 	</table>
 	
-	<pre>
-		<p class = "icerik" >
-		
-	Yeni BMW X1, çok yönlülüğü ve işlevselliği ile herkesi etkilemeyi başarıyor:
- 
-
-	- Sportif ve kendinden emin bir duruş için özenle işlenmiş dış tasarım
-	- Yüksek kaliteli malzemeler ve BMW Kavisli Ekran gibi yeniliklerle donatılmış iç tasarım
-
-	Yeni BMW X1 sDrive20i:
-	Yakıt tüketimi (litre/100 km) (WLTP ortalama): 5,9 - 6,6 
-	CO2 emisyonu (g/km) (WLTP ortalama): 133 - 149
-		
-		</p>
-		
-	</pre>
+	<br><br><br>
 	
-	<br><br>
+	<table align = "center" width = "85%" >
+		<tr>
+			<td>
+				<p class = "icerik" >
 	
-	<table width = "75%" cellpadding = "10" align = "center" >
+					BMW X3, her türlü arazi koşuluna meydan okuyor. Sınıfında ilk kez kullanılan yarı otonom sürüş, harekete duyarlı komut ve
+					yenilenen xDrive gibi sistemleri ile BMW X3 heyecan verici performansıyla sizlere benzersiz bir sürüş deneyimi sunuyor.
+					<br>
+					BMW X3:<br>
+					Yakıt tüketimi (litre/100 km) (ortalama): 6,5 - 5,8<br>
+					CO2 emisyonu (g/km) (ortalama): 171 - 151<br>
+	
+				<p>
+			<td>
+		<tr>
+	</table>
+	
+	<br></br>
+	
+	<table width = "80%" align = "center" >
 		
 		<tr>
 			
-			<td width = "30%" ><img src = "../../resimler/modeller/X/X1/X1kokpıt.jpg" width = "100%" ></td>
-			<td width = "30%" ><img src = "../../resimler/modeller/X/X1/konsol.jpg" width = "100%" ></td>
-			<td width = "30%" ><img src = "../../resimler/modeller/X/X1/konfor.jpg" width = "100%" ></td>
+			<td width = "50%" rowspan = "2" ><img src = "../../resimler/modeller/X/X3/on.jpg" width = "100%" ></td>
+			<td  height = "70" valign = "middle" ><a class = "aciklamaBaslik" > BMW X3’ÜN ÖN TASARIMI. </a></td>
 			
 		</tr>
 		<tr>
 			
-			<td align = "center" ><a class = "miniAciklamaBaslik"> Kokpitte sezgisel kontroller.</a></td>
-			<td align = "center" ><a class = "miniAciklamaBaslik"> Modern merkez konsol. </a></td>
-			<td align = "center" ><a class = "miniAciklamaBaslik"> Arka bölümde konfor. </a></td>
+			<td valign = "top" ><a class = "aciklama"> Genişliğe ve X modellerine özgü öğelere yapılan yoğun vurgu, BMW X3'ün ön tasarımına son derece ayırt edici bir görünüm kazandırıyor.
+			Açılı bir formda tasarlanan BMW Böbrek Izgaraları ve üçgen şeklinde yorumlanan dikey hava girişleriyle yeniden tasarlanan tampon aracın olağanüstü hakimiyetini
+			öne çıkarıyor. Yaklaşık 10 mm kadar alçaltılan tamamen LED farlar, modern ve dikkat çekici görünümüyle BMW X3'ün genel hatlarını tamamlıyor. </a></td>
 			
 		</tr>
 		<tr>
 			
-			<td align = "justify" valign = "top" ><a class = "miniAciklama">Dokunmatik ve sesli kontrol özelliğine sahip BMW Kavisli Ekran, ince ve çerçevesiz yapısıyla gerçek anlamda göz alıcı bir detay olmasının yanı sıra BMW iDrive'ın temel arayüzünü oluşturuyor.</a></td>
-			<td align = "justify" valign = "top" ><a class = "miniAciklama">Düğmeli/kaydırmalı kontrol özelliğine sahip modern merkez konsol, yeni nesil kumanda öğeleri ve entegre kablosuz şarj yuvası ile karşımıza çıkıyor.</a></td>
-			<td align = "justify" valign = "top" ><a class = "miniAciklama">Ayrıcalıklı kontrast dikişlerle sunulan Sensatec döşemeleri ve yeni tasarımları sayesinde arka koltuklar tüm yolculara üst düzey konfor deneyimi yaşatıyor. Birbirinden bağımsız olarak 40:20:40 oranında katlanabilen sırtlıklar oldukça esnek bir kullanım sunuyor.</a></td>
+			<td  height = "70" valign = "middle" ><a class = "aciklamaBaslik" > BMW X3’ÜN ARKA TASARIMI. </a></td>
+			<td width = "50%" rowspan = "2" ><img src = "../../resimler/modeller/X/X3/arka.jpg" width = "100%" ></td>
 			
 		</tr>
-		
+		<tr>
+			
+			<td valign = "top" ><a class = "aciklama">BMW X3'ün yeniden tasarlanan arka bölümü çarpıcı ve modern bir etki yaratıyor. 
+			Yeni 3 boyutlu tamamen LED farlar araca daha belirgin bir duruş kazandırıyor. Gömme serbest formdaki geniş egzoz çıkışları, 
+			üst bölümdeki yatay çizgilerden başlayarak aracın modern görünümünü ön plana çıkartıyor. Yeniden tasarlanan gövde altı korumasıyla birlikte 
+			BMW X3'ün arka bölümü yol üzerinde net ve güçlü bir duruş sergiliyor.</a></td>
+			
+		</tr>
 	</table>
 	
 	<br><br>
-	
 	
 	<!-- slider -->
 	
-	
 	<br><br>
 	
 	<table width = "75%" cellpadding = "10" align = "center" >
 		
 		<tr>
 			
-			<td width = "30%" ><img src = "../../resimler/modeller/X/X1/direksiyon.jpg" width = "100%" ></td>
-			<td width = "30%" ><img src = "../../resimler/modeller/X/X1/fren.jpg" width = "100%" ></td>
-			<td width = "30%" ><img src = "../../resimler/modeller/X/X1/motor.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/modeller/X/X3/X3gosterge.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/modeller/X/X3/X3koltuk.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/modeller/X/X3/X3kapı.jpg" width = "100%" ></td>
 			
 		</tr>
 		<tr>
 			
-			<td align = "center" ><a class = "aciklamaBaslik">   Vites kulakçıkları ile Steptronic şanzıman.  </a></td>
-			<td align = "center" ><a class = "aciklamaBaslik">  19 inç M Alaşım fren.  </a></td>
-			<td align = "center" ><a class = "aciklamaBaslik"> TwinPower Turbo sıralı 4 silindirli benzinli motor. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> BMW Live Cockpit Professional. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Spor ön koltuklar. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Kumandalar için galvanize süslemeler. </a></td>
 			
 		</tr>
 		<tr>
 			
-			<td align = "justify" valign = "top" ><a class = "aciklama">Vites değiştirme kulakçıklarına sahip otomatik 7 ileri Steptronic şanzıman, sportif vites değiştirme karakterini yüksek verimlilik ve üst düzey sürüş konforuyla bir araya getiriyor.</a></td>
-			<td align = "justify" valign = "top" ><a class = "aciklama">Gri fren kaliperleriyle 19 inç M Alaşım fren olağanüstü seviyede yavaşlama ve üstün bir denge sağlar.</a></td>
-			<td align = "justify" valign = "top" ><a class = "aciklama">TwinPower Turbo sıralı 4 silindirli benzinli motor, dinamik güç üretimini M ailesine özgü güçlü motor sesiyle birlikte sunuyor.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Navigasyon fonksiyonuna sahip BMW Live Cockpit Professional, 12,3 inç gösterge paneli ve yüksek çözünürlüklü 12,3 inç Kontrol Ekranını içeriyor.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Ayarlanabilen spor ön koltuklar, ileri/geri konum ayarının yanı sıra sırtlık ve koltuk açısı ayarı da dahil olmak üzere çeşitli manuel ayar seçenekleriyle birlikte sunuluyor. Ayrıca, sürücü koltuğunun sırtlık genişliği de ayarlanabiliyor.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Elektrikli camlar, direksiyondaki çok fonksiyonlu tuşlar, kapı kontrol paneli ve kapı kilitleme düğmesi üzerindeki opsiyonel özel galvanize süslemelere sahip kumanda öğeleri yüksek kaliteli bir görünüm yaratıyor.</a></td>
 			
 		</tr>
 		
 	</table>
 	
 	<br><br><br>
+	
 	
 	<!-- InstanceEndEditable --></div>
     <div id="fooder">
