--- a/modeller/modeller.html
+++ b/modeller/modeller.html
@@ -129,7 +129,7 @@
 				</a>
 			</td>
 			<td width = "30%" >
-				<a href = "#" class = "link" >
+				<a href = "XSeries/X2Series.html" class = "link" >
 					<table width = "100%" >
 				
 						<tr>
@@ -152,7 +152,7 @@
 				</a>
 			</td>
 			<td width = "30%" >
-				<a href = "#" class = "link" >
+				<a href = "XSeries/X3Series.html" class = "link" >
 					<table width = "100%" >
 				
 						<tr>
